@@ -1,0 +1,8 @@
+name: 'Search API Database Autocomplete Test'
+type: module
+description: 'Support module for testing Autocomplete support of the "Database" backend'
+package: Search
+dependencies:
+  - search_api:search_api_test_views
+core: 8.x
+hidden: true
